# whisper.cpp

./: CMakeLists.txt  Makefile  make.sh
examples/main/: main.cpp
examples/talk-llama/: llama.cpp
ggml/include/: ggml.h
ggml/src/: CMakeLists.txt  ggml-backend.c  ggml-cann.cpp  ggml.c
ggml/src/ggml-cann/: acl_tensor.cpp  aclnn_ops.cpp
include/ascendc_kernels/: aclrtlaunch_ascendc_dup_by_rows_fp16.h  aclrtlaunch_ascendc_dup_by_rows_fp16_to_fp32.h  aclrtlaunch_ascendc_dup_by_rows_fp32.h  aclrtlaunch_ascendc_dup_by_rows_fp32_to_fp16.h  aclrtlaunch_ascendc_get_row_f16.h  aclrtlaunch_ascendc_get_row_f32.h  aclrtlaunch_ascendc_get_row_q4_0.h  aclrtlaunch_ascendc_get_row_q8_0.h  aclrtlaunch_ascendc_quantize_f16_q8_0.h  aclrtlaunch_ascendc_quantize_f32_q8_0.h  aclrtlaunch_triple_chevrons_func.h
models/: convert-pt-to-ggml.py  download-ggml-model.sh
src/: whisper.cpp
tests/: CMakeLists.txt  test-backend-ops.cpp
